examples/test/testpolicy7494.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7494
  namespace: namespace350
spec:
  podSelector:
    matchLabels:
      key12: value29
      key39: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value30
      podSelector:
        matchLabels:
          key12: value48
          key34: value32
          key2: value46
